Fixing Overflow X bug

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
   text-decoration: none;
 
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
